se crea el hola mundo2

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -64,20 +64,11 @@
 </style>
 
 <body>
-    <nav>
-        <h1>Equipo 5</h1>
-    </nav>
+
     <section class="main">
-        <div class="caja 1">Diego</div>
-        <div class="caja 2">Eric</div>
-        <div class="caja 1">Valentina</div>
-        <div class="caja 2">Keny</div>
-        <div class="caja 3">Daniel</div>
+        <div class="caja 1">Hola Mundo</div>    
     </section>
-    <footer>
-        <p class="autores">Equipo numero 5</p>
-        <p>Todos los derechos reservados</p>
-    </footer>
+   
      <!-- Noncompliant 
     <li>Apple</li>         
     <li>Strawberry</li>     
